# qa_guru_python_api_3_19

./: .env  README.md  config.py  pyproject.toml
framework/: demoqa_with_env.py
schemas/: user.py
tests/: conftest.py  test_demo_web_shop.py  test_reqres.py
utils/: base_session.py
